--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <template name="main">
-	Welcome to Applause!
+	<meta http-equiv="refresh" content="0; url=http://www.jacksondc.com/applause/" />
+	Redirecting you to <a href="http://www.jacksondc.com/applause">jacksondc.com/applause</a>
 </template>
 
 <body>
