--- a/client/main.html
+++ b/client/main.html
@@ -6,3 +6,20 @@
 <body>
 	{{> yield}}
 </body>
+
+<head>
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
+</head>
+
+<template name="search">
+	<div id="search">
+		<h1>Search</h1>
+		<form>
+			<input id="url" type="text" placeholder="URL (e.g. jacksondc.com/applause)">
+			<input type="submit" value="Search">
+		</form>
+		<p>
+			{{result}}
+		</p>
+	</div>
+</template>
