--- a/index.html
+++ b/index.html
@@ -56,5 +56,6 @@
         <p>A few details: the server is built in Meteor and hosted on Heroku. It counts Applause based on URL, so if you have multiple URLs showing the same content (e.g. an index with links to article pages) you'll only be able to put the button on one of the pages. It also only allows one vote per IP, which is probably good-enough system considering that you can cheat and show whatever number you want anyway.</p>
 
         <script src="http://applause.jacksondc.com/embed.min.js"></script>
+        <!--<script src="http://localhost:3000/embed.min.js"></script>-->
     </body>
 </html>
