--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 7]>
